cambios en comentarios y legibilidad